alignment and font-family fix.

--- a/styles.css
+++ b/styles.css
@@ -9,19 +9,22 @@ body{
 
 .preview-card{
     text-align: center;
-    height: 350px;
-    width: 300px;
+    height: 450px;
+    width: 355px;
     background-color: white;
-    border-radius: 30px;
+    border-radius: 25px;
+    border: 1px solid black;
     box-shadow: 10px 10px;
 }
 
 .card-img{
-    border-radius: 30px;
-    width: 75%;
+    border-radius: 25px;
+    margin-top: 25px;
+    width: 85%;
    
 }
 .card-text{
 
+    font-family: Figtree, sans-serif;
     margin-top: 20px;
 }
